[package]
name = "warp_hello"
version = "0.1.0"
authors = ["Kamek <b.kamek@gmail.com>"]
edition = "2018"

[dependencies]
warp = "0.1.13"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
validator = "0.8.0"
validator_derive = "0.8.0"
eui48 = { version = "0.4", features = ["serde"] }
